# LLM-VM

./: .env.example  .envi  .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Fix_error_handling_and_clean_up_client.py  LICENSE  LoRa.py  Makefile  Queuing_for_concurrent_requests_REST.py  README.md  RELEASENOTESv0.1.5.md  SERVER_API.md  anarchy.db  app.py  celery_config.py  check_src.sh  data_gen.pkl  data_gen_choices.pkl  data_gen_delim.pkl  data_gen_eval.pkl  eval_finetuned.py  evaluation_script.py  fine_tuning_script.py.py  flake.nix  glossary.md  kubernetes_support  llm_vm.py  llm_vm_test_server.py  model_uri_tables.md  my-llm-deployment.yaml  my-llm-hpa.yaml  my-llm-service.yaml  output.txt  preprocessing_script.py  push_pypi.yml  (+26 more)
.github/: .pylintrc
app/: __init__.py  routes.py
documentation_html/: _r_e_a_d_m_e_8md.html  _s_e_r_v_e_r___a_p_i_8md.html  _ticker-example.html  annotated.html  annotated_dup.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2bothandler_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2bothandler_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2business__logic_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2business__logic_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2replacer_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2replacer_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2requests_2call__llm_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2requests_2call__llm_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2requests_2call__open__ai_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2requests_2call__open__ai_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2tool__utils_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2tool__utils_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2tools_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2tools_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2use__tool_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2use__tool_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2utils_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2agent__helper_2utils_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2get__decision__model_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2get__decision__model_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2helpers_2check__model__status_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2helpers_2check__model__status_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2helpers_2delete__model_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2helpers_2delete__model_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2helpers_2persist__models_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2helpers_2persist__models_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2helpers_2upload__model_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2helpers_2upload__model_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2utils_2answer__from__memory__model_2answer__from__memory__model__data_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2utils_2answer__from__memory__model_2answer__from__memory__model__data_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2utils_2answer__from__memory__model_2get__asm__as__jsonl_8py.html  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2utils_2answer__from__memory__model_2get__asm__as__jsonl_8py.js  build_2lib_2llm__vm_2agents_2_f_l_a_t_2models_2utils_2question__split__model_2get__qs__as__jsonl_8py.html  (+1159 more)
documentation_html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+95 more)
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
examples/: eval_finetuned.py  quickstart.py  quickstart_REBEL.py  quickstart_finetune.py  quickstart_finetune_load.py  quickstart_guided.py  quickstart_interface.py  quickstart_quantized_llama.py  quickstart_speculative_sampling.py
integration_tests/src/llm_vm/server/: main_tests.py
nix/: apps.nix  default.nix  devshells.nix  nixpkgs-instances.nix  package.nix
src/compiler/: ast_to_lalg.py  get_bloom_graph.py  lalg_to_c.py  parser.py  utils.py
src/llm_vm/: Vertex_AI_Google_API_based_fine_tuning.py  amd_quant.py  app.py  client.py  config.py  data_path.py  generation_algorithm.py  guided_completion.py  llm_vm_server_app.py  model_tuneing.py  onsite_llm.py  server.py  settings.default.toml  vector_db.py  vector_store.py
src/llm_vm/agents/: agent_interface.py
src/llm_vm/app/: __init__.py  routes.py
src/llm_vm/completion/: __init__.py  config.json  data_synthesis.py  models.py  optimize.py  test_data_synthesis.py  test_optimize.py
src/llm_vm/conditioner/: regex_conditioner.py
src/llm_vm/llm_vm_server/: main.py  routes.py
src/llm_vm/llmvm_server/: main.py  routes.py
src/llm_vm/server/: anarchparse.py  cache.py  main.py  routes.py
src/llm_vm/utils/: db_initializer.py  disk.py  keys.py  labels.py  logger.py  print_types.py  ram.py  record_latency.py  speculative_sampling.py  stdlog.py  tools.py  typings.py  typings_llm.py
src/server/: db.sqlite3
src/server/api/: forms.py  models.py  serializers.py  urls.py  views.py
src/server/server/: settings.py  urls.py  wsgi.py
tests/: test_change_dtype.py  test_conditional_generation.py  test_data_synthesis.py  test_gpt3.5_finetune.py  test_grammar_constraints.py  test_llm_vm.py  test_onsite_llm.py  test_optimize.py  test_regex_decoding.py
(+68 files in other folders)
